--- a/monitoring/configs/grafana/grafana.ini
+++ b/monitoring/configs/grafana/grafana.ini
@@ -29,24 +29,24 @@
 #################################### Server ####################################
 [server]
 # Protocol (http, https, h2, socket)
-;protocol = http
+protocol = https
 
 # The ip address to bind to, empty will bind to all interfaces
 ;http_addr =
 
 # The http port  to use
-;http_port = 3000
+http_port = 3000
 
 # The public facing domain name used to access grafana from a browser
-;domain = localhost
+domain = sample.com
 
 # Redirect to correct domain if host header does not match domain
 # Prevents DNS rebinding attacks
-;enforce_domain = false
+enforce_domain = false
 
 # The full public facing url you use in browser, used for redirects and emails
 # If you use reverse proxy and sub path specify full url (with sub path)
-;root_url = %(protocol)s://%(domain)s:%(http_port)s/
+root_url = %(protocol)s://%(domain)s:%(http_port)s/
 
 # Serve Grafana from subpath specified in `root_url` setting. By default it is set to `false` for compatibility reasons.
 ;serve_from_sub_path = false
@@ -61,8 +61,8 @@
 ;enable_gzip = false
 
 # https certs & key file
-;cert_file =
-;cert_key =
+cert_file = /home/server.crt
+cert_key = /home/server.key
 
 # Unix socket path
 ;socket =
@@ -217,7 +217,7 @@
 ;admin_user = admin
 
 # default admin password, can be changed before first start of grafana,  or in profile settings
-;admin_password = [PASSWORD]
+;admin_password = TEST123!
 
 # used for signing
 ;secret_key = SW2YcwTIb9zpOOhoPsMm
