--- a/monitoring/configs/prometheus/prometheus.yml
+++ b/monitoring/configs/prometheus/prometheus.yml
@@ -4,8 +4,14 @@ global:
 scrape_configs:
   - job_name: "prometheus"
     scrape_interval: 5s
+    scheme: https
+    tls_config:
+      insecure_skip_verify: true
     static_configs:
     - targets: ["localhost:9090"]
+    basic_auth:
+      username: admin
+      password: TEST123!
 
   - job_name: "node"
     static_configs:
