--- a/monitoring/monitoring.yml
+++ b/monitoring/monitoring.yml
@@ -17,6 +17,10 @@ services:
       - source: grafana_pwd
         target: /password.sh
         mode: 0555
+      - source: web_cert
+        target: /home/server.crt
+      - source: web_key
+        target: /home/server.key
     entrypoint: /password.sh
     depends_on:
     - prometheus
@@ -32,6 +36,12 @@ services:
     configs:
       - source: prom_conf
         target: /etc/prometheus/prometheus.yml
+      - source: web_cert
+        target: /home/server.crt
+      - source: web_key
+        target: /home/server.key
+      - source: prom_web_config
+        target: /etc/prometheus/web-config.yml
     volumes:
       - prom_db:/prometheus
     command:
@@ -40,6 +50,7 @@ services:
       - '--web.console.libraries=/etc/prometheus/console_libraries'
       - '--web.console.templates=/etc/prometheus/consoles'
       - '--web.enable-lifecycle'
+      - '--web.config.file=/etc/prometheus/web-config.yml'
     depends_on:
     - node-exporter
     - cadvisor
@@ -88,3 +99,9 @@ configs:
     file: ./configs/grafana/grafana.ini
   grafana_pwd:
     file: ./configs/grafana/password.sh
+  web_cert:
+    file: ./configs/prometheus/certs/server.crt
+  web_key:
+    file: ./configs/prometheus/certs/server.key
+  prom_web_config:
+    file: ./configs/prometheus/web-config.yml
